--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -428,24 +428,14 @@ jobs:
             echo "saving OldWorkflowID in mismatch.io ..."
             curl -H "Content-Type: text/plain" -H "token: aa9c7a68-e4a1-49c0-a5a5-677faa7ae1d0" --request PUT --data "$OldWorkflowID" https://api.memstash.io/values/oldworkflowid_${CIRCLE_WORKFLOW_ID:0:7}
 
-            echo "update Production Stack ..."
             echo ${CIRCLE_WORKFLOW_ID:0:7}
-            
-            AWSRegion=$(aws configure get region --output text)
-            echo $AWSRegion
 
-            echo `aws cloudformation deploy \
-                    --template-file .circleci/files/cloudfront.yml \
-                    --stack-name ProductionStack \
-                    --region ${AWS_DEFAULT_REGION} \
-                    --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}",AWSRegion="${AWSRegion}"  \
-                    --tags project=udapeople`
-            
+            echo "updating Production Stack ..."
             aws cloudformation deploy \
                     --template-file .circleci/files/cloudfront.yml \
                     --stack-name ProductionStack \
                     --region ${AWS_DEFAULT_REGION} \
-                    --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}",AWSRegion="${AWSRegion}"  \
+                    --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"  \
                     --tags project=udapeople
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"  
