--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -5,9 +5,7 @@ Parameters:
   WorkflowID:
     Description: Unique identifier.
     Type: String
-  AWSRegion:
-    Description: AWS Region.
-    Type: String
+
 
 
 Resources:
@@ -23,7 +21,7 @@ Resources:
     Properties:
       DistributionConfig:
         Origins:
-          - DomainName: !Sub "udapeople-${WorkflowID}.s3-website-${AWSRegion}.amazonaws.com"
+          - DomainName: !Sub "udapeople-${WorkflowID}.s3-website-${AWS::Region}.amazonaws.com"
             Id: webpage
             S3OriginConfig:
               OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
