--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -21,7 +21,7 @@ Resources:
     Properties:
       DistributionConfig:
         Origins:
-          - DomainName: !Join ['','udapeople-',${WorkflowID},'.s3-website-',!Ref "AWS::Region",'.amazonaws.com'] 
+          - DomainName: !Join [ '', [ 'udapeople-', ${WorkflowID}, '.s3-website-', !Ref AWS::Region, '.amazonaws.com' ] ]
             Id: webpage
             S3OriginConfig:
               OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
