--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -21,7 +21,7 @@ Resources:
     Properties:
       DistributionConfig:
         Origins:
-          - DomainName: !Join [ '', [ 'udapeople-', !Ref WorkflowID, '.s3-website-', !Ref AWS::Region, '.amazonaws.com' ] ]
+          - DomainName: !Sub 'udapeople-${WorkflowID}.s3-website-${AWS::Region}.amazonaws.com'
             Id: webpage
             S3OriginConfig:
               OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
