--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ commands:
           when: on_fail
           command: |            
             echo "deleteing s3://udapeople-<< parameters.workflow_id >>"
-            aws s3 rm "s3://udapeople-<< parameters.workflow_id >>" --recursive
+            aws s3 rb "s3://udapeople-<< parameters.workflow_id >>" --force
             echo "deleteing udapeople-backend-<< parameters.workflow_id >>"
             aws cloudformation delete-stack --stack-name "udapeople-backend-<< parameters.workflow_id >>"
             echo "deleteing udapeople-frontend-<< parameters.workflow_id >>"
@@ -469,16 +469,16 @@ jobs:
             echo Old Workflow ID: "${OldWorkflowID}"
             echo Current Workflow ID: "${CIRCLE_WORKFLOW_ID:0:7}"
 
-            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OldWorkflowID}" ]]
+            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" == "${OldWorkflowID}" ]]
             then
+              echo "------------------- Cannot Cleanup -------------------"
+            else
               echo "------------------- Delete Confirmed -------------------"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               echo "deleting udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               echo "deleting udapeople-frontend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-            else
-              echo "------------------- Cannot Cleanup -------------------"
             fi
             
 workflows:
